--- a/Resources/layout/League.axml
+++ b/Resources/layout/League.axml
@@ -36,15 +36,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_ResultConfirm" />
-    <ScrollView
+    <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView1">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/txt_Table" />
-    </ScrollView>
+        android:layout_height="match_parent"
+        android:id="@+id/listRanking" />
 </LinearLayout>
